2007-01-14  Per Bothner  <per@bothner.com>

	* XName.java (isNameStart): Use Character.isUnicodeIdentifierStart.
	(checkName): New static method.
	(isNmToken, isName(String), isNCName): New methods.
	(isName(String,boolean)): Remove method.
	* XMLFilter.java (writeProcessingInstruction): Update to use isNCName.

	* XMLFilter.java (writeProcessingInstruction): Collapse whitespace
	in target.

2007-01-11  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (startElement): Check for undeclare-namespaces
	in node's namespaceBindings, and ignore if undeclareNamespaces.

2007-01-04  Per Bothner  <per@bothner.com>

	* NodeTree.java (baseUriOfPos): Change return type to Path.
	Use Path methods rather than URI_utils.
	Swap local variable names base and uri to be less confusing.

2007-01-02  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (<init>): Update to take Path.
	* XMLParser.java: Update to use gnu.text.Path.

2006-12-29  Per Bothner  <per@bothner.com>

	* XMLParser.java: Change handling of encoding detection.
	Use new LineInputStreamReader class.
	Fully parse xml declaration, checking version, and making use
	of encoding specifier.

	* XMLFilter.java Fix case when SAX2 is not PreProcess-selected.
	De-tabify so PreProcess doesn't get confused.
	(write): Remove duplicate when PreProcess to not use CharSequence.

2006-12-16  Per Bothner  <per@bothner.com>

	* XMLParser.java (XMLStreamReader): New static method.
	(parse): Use it.

	* XMLParser.java (parse): Call incrLineNumber immediately at each
	line, rather than deferring it.

2006-12-15  Per Bothner  <per@bothner.com>

	* XMLFilter.java (closeStartTag): If out is a ContentConsumer, call
	endStartTag so it happens earlier, with correct line position.

2006-12-14  Per Bothner  <per@bothner.com>

	* XMLParser.java.in: Removed.  Replaced by ...
	* XMLParser.java: New file.  Based on XMLParser.java.in, but with
	byte variant removed.  Handwire using XMLFIlter and LineBufferedReader.
	Do line-ending handling here.